--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       <button>Next Video</button>
     </div>
 
-    <!--  -->
     <script src="./src/index.js"></script>
-    <script src="./src/audio.js"></script>
+    <!-- <script src="./src/audio.js"></script> -->
   </body>
 </html>
